--- a/board/templates/board/board_detail.html
+++ b/board/templates/board/board_detail.html
@@ -8,7 +8,7 @@
         <p class="float-right">{{ board.created_at }}</p>
         {{ board.author }}
         <hr/>
-        {{ board.content }}
+        {{ board.content | safe }}
     </div>
 </div>
 
